--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "daisyui": "^5.0.35",
     "firebase": "^11.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/axios": "^0.9.36",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
