--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "@types/xml2js": "^0.4.14",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.0",
     "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
   },
