--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "daisyui": "^5.0.35",
     "firebase": "^11.7.1",
+    "framer-motion": "^12.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
